--- a/src/Header.css
+++ b/src/Header.css
@@ -1,10 +1,15 @@
 nav {
-    text-align: center;
+    display: flex;
+    justify-content: center;
     min-height: 50px; 
-    background-color: lightsalmon;
+    background-color: #22b453;
+    color: #281501;
 }
 
 a {
     text-decoration: none;
     padding-right: 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
