--- a/src/components/register/Register.css
+++ b/src/components/register/Register.css
@@ -1,9 +1,7 @@
 #main-content {
     display: flex;
     justify-content: center;
-    /* vertical-align: middle; */
     flex-grow: 1;
-    background-color: lightblue;
 }
 
 form {
@@ -14,11 +12,11 @@ form {
 }
 
 form fieldset {
-    color: white;
-    border-color: white;
+    color: #281501;
+    border-color: #22b453;
     border-radius: 0.4em;
     width: 100%;
-    background-color: lightsalmon;
+    background-color: #22b453;
 }
 
 
@@ -30,8 +28,35 @@ form input {
     border-style: none;
 }
 
-.p-wrap {
+.input-wrap {
     display: flex;
     flex-wrap: nowrap;
     justify-content: left;
+}
+
+.input-wrap input {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    vertical-align: middle;
+    width: 10%;
+    margin: 0;
+}
+
+.input-wrap label {
+    width: 90%;
+}
+
+.submit {
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+    width: 30%;
+    padding: 0.2em 0;
+}
+
+.gender {
+    margin-left: 0.3em;
+    border-radius: 0.4em;
+    padding: 0.05em;
 }
